refactor: Update tsoa.json to include recursive controller path globs
