# src/docs/swagger.json
@@ -34,57 +34,6 @@
 				"type": "object",
 				"additionalProperties": true
 			},
-			"UserLoginResponse": {
-				"properties": {
-					"token": {
-						"type": "string"
-					},
-					"message": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"token",
-					"message"
-				],
-				"type": "object",
-				"additionalProperties": true
-			},
-			"ApiSuccessResponse_UserLoginResponse_": {
-				"properties": {
-					"success": {
-						"type": "boolean",
-						"enum": [
-							true
-						],
-						"nullable": false
-					},
-					"data": {
-						"$ref": "#/components/schemas/UserLoginResponse"
-					}
-				},
-				"required": [
-					"success"
-				],
-				"type": "object",
-				"additionalProperties": true
-			},
-			"UserLoginRequest": {
-				"properties": {
-					"username": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"username",
-					"password"
-				],
-				"type": "object",
-				"additionalProperties": true
-			},
 			"UserRegisterResponse": {
 				"properties": {
 					"message": {
@@ -170,6 +119,57 @@
 				],
 				"type": "object",
 				"additionalProperties": true
+			},
+			"UserLoginResponse": {
+				"properties": {
+					"token": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"token",
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
+			"ApiSuccessResponse_UserLoginResponse_": {
+				"properties": {
+					"success": {
+						"type": "boolean",
+						"enum": [
+							true
+						],
+						"nullable": false
+					},
+					"data": {
+						"$ref": "#/components/schemas/UserLoginResponse"
+					}
+				},
+				"required": [
+					"success"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
+			"UserLoginRequest": {
+				"properties": {
+					"username": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"username",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": true
 			}
 		},
 		"securitySchemes": {}
@@ -183,45 +183,6 @@
 		"contact": {}
 	},
 	"paths": {
-		"/user/login": {
-			"post": {
-				"operationId": "Login",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"anyOf": [
-										{
-											"$ref": "#/components/schemas/ApiErrorResponse"
-										},
-										{
-											"$ref": "#/components/schemas/ApiSuccessResponse_UserLoginResponse_"
-										}
-									]
-								}
-							}
-						}
-					},
-					"401": {
-						"description": "Unauthorized"
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/UserLoginRequest"
-							}
-						}
-					}
-				}
-			}
-		},
 		"/user/register": {
 			"post": {
 				"operationId": "Register",
@@ -300,6 +261,45 @@
 						}
 					}
 				]
+			}
+		},
+		"/auth/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/ApiErrorResponse"
+										},
+										{
+											"$ref": "#/components/schemas/ApiSuccessResponse_UserLoginResponse_"
+										}
+									]
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Authentication failed"
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserLoginRequest"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
